<resources>
    <string name="category1">Anniversary</string>
    <string name="category2">Birthday</string>
    <string name="category3">Blood</string>
    <string name="category4">Chores</string>
    <string name="category5">Church</string>
    <string name="category6">Class Early</string>
    <string name="category7">Date</string>
    <string name="category8">Dinner</string>
    <string name="category9">Doctor</string>
    <string name="category10">Donating Blood</string>
    <string name="category11">Drunk Driving</string>
    <string name="category12">Forgot</string>
    <string name="category13">Funeral</string>
    <string name="category14">Homework</string>
    <string name="category15">Late Work</string>
    <string name="category16">Miss Class</string>
    <string name="category17">Miss Work</string>
    <string name="category18">Murder</string>
    <string name="category19">Not Going</string>
    <string name="category20">Phone</string>
    <string name="category21">Purchase</string>
    <string name="category22">Shower</string>
    <string name="category23">Speeding</string>
    <string name="category24">Text</string>
    <string name="category25">Wedding</string>
    <string name="category26">Working Out</string>
    <string name="category27">General</string>
    <string name="logo">Logo</string>
    <string name="title">Title TBA</string>
    <string name="anniversary1">I want you to know that I have never been so sorry in my life, my love. I have no excuse for having forgotten this important day for us. I really want you to forgive me and make it up to you for this big mistake. I hope you know that I love you and in no time this neglect was with a bad intention, you are the most important thing in my life. Seriously I apologize, it will not be repeated ever again, my life.</string>
    <string name="anniversary2">You are the only one that really makes me smile from the bottom of my soul, as if I were floating. The memories with you are the best I could ask for in my life. Admittedly, I forgot our anniversary and it weighs in the heart to know how much I have hurt you with my carelessness. Now I am going through a very complicated situation in the office and, although it should not be an excuse nor meddle in our private lives, I allowed it to happen and I could not be more sorry. I ask a little understanding and a second chance. I adore you.</string>
    <string name="app_name">Excuses</string>
    <string name="birthday1">"I'm broke"</string>
    <string name="birthday2">"Avoid attending a party by using the excuse of travelling. Pretend that you are going to be away during the time when you have been invited for an event. Switch off your cell phone so you don't have to answer any calls."</string>
    <string name="blood1">I put a homeless man in a trash can and rolled him down a hill</string>
    <string name="blood2">Brought a knife to a gun fight.</string>
    <string name="blood3">Brought a gun to a knife fight.</string>
    <string name="buttonName">Search</string>
    <string name="buttonName2">View Categories</string>
    <string name="buttonName3">Submit Your Own</string>
    <string name="buttonName4">Close Application</string>
    <string name="buttonName5">Get Another</string>
    <string name="buttonName6">View All Excuses</string>
    <string name="buttonName7">Back to Title Screen</string>
    <string name="chores1">My doctor told me cleaning is bad for my Blood Pressure.</string>
    <string name="chores2">I thought it was your turn!</string>
    <string name="chores3"> I’ve got to meet Ashley, Ashley, and Heather to work on our vinegar and baking soda car for physics.  By the way, you need to take me to get some vinegar and baking soda and a plastic bottle to use for a car, some wheels, and zebra duct tape and a feather to decorate it.  Those are the parts I have to bring.</string>
    <string name="chores4">I have to go to Mary-Alexander Margaret’s house to give back her earphones because she’s got the most important game of her life and she has to warm up listening to music. (Don’t tell parental unit the game is tomorrow)</string>
    <string name="chores5">I have to shop online for a Homecoming dress because you won’t take me shopping for one because I have to do all these chores.</string>
    <string name="chores6">When you asked me Friday if I had homework, I forgot I have three papers due Monday. One’s about “work ethic,” or something stupid. I’ve really gotta get started on them after I get something to eat.</string>
    <string name="church1">Sundays are my only days to sleep in.</string>
    <string name="church2">I have to work on sundays.</string>
    <string name="church3">People judge me.</string>
    <string name="church4">"I don't have the right clothes to wear."</string>
    <string name="church5">All the songs they sing are old.</string>
    <string name="church6">"I didn't have money to put in the church offering plate."</string>
    <string name="classEarly1">Let your professor know that you’re scheduled for jury duty. They can’t argue with the law.</string>
    <string name="classEarly2">Simply tell your professor that you’ve been in the bathroom all morning. No one wants to hear the details on your anus exploding, so they likely won’t pry any further. This is a bread and butter excuse for those who don’t mind putting your BMs on blast.</string>
    <string name="date1">My best friend broke her leg.</string>
    <string name="date2">I have to go to a rally.</string>
    <string name="date3">"I'm gonna' go to the restroom"</string>
    <string name="date4">I shit my pants.</string>
    <string name="defaultText">There is no excuse for you!</string>
    <string name="dinner1">My dog set its own butt on fire</string>
    <string name="dinner2">My house caught on fire</string>
    <string name="dinner3">I got lost</string>
    <string name="doctor1">I already know the test results will come back positive.</string>
    <string name="doctor2">Life is hard.</string>
    <string name="donatingBlood1">"I'm afraid of needles."</string>
    <string name="donatingBlood2">Others are donating enough</string>
    <string name="donatingBlood3">My blood alcohol level would kill some people</string>
    <string name="drunkDriving1">"I'm not drunk."</string>
    <string name="drunkDriving2">My wife cheated on me.</string>
    <string name="forgot1">My doctor called, I have alzheimers.</string>
    <string name="forgot2">I was in a car accident</string>
    <string name="forgot3">I got hit with a baseball bat</string>
    <string name="forgot4">I was saving the planet</string>
    <string name="funeral1">"It was your Ex's funeral."</string>
    <string name="funeral2">Zombies.</string>
    <string name="general1">There is no excuse for you!</string>
    <string name="general10">My daughter tried to take a yogurt bath at 3 in the morning.</string>
    <string name="general11">"I didn't have time."</string>
    <string name="general12">Fear of nuclear annihilation.</string>
    <string name="general13">Nazis.</string>
    <string name="general14">"Instructions weren't clear."</string>
    <string name="general15">It got stuck.</string>
    <string name="general2">I have cancer.</string>
    <string name="general3">My anus was on fire.</string>
    <string name="general4">I slept in.</string>
    <string name="general5">I was up too late last night.</string>
    <string name="general6">I has a hangover.</string>
    <string name="general7">I was drunk.</string>
    <string name="general8">My wife is pregnant.</string>
    <string name="general9">My husband is pregnant.</string>
    <string name="greeting">What do you need an excuse for?!</string>
    <string name="homework1">My dad forgot to do it for me.</string>
    <string name="homework2">My mother took it to have it framed.</string>
    <string name="homework3">I didn’t understand the homework, could you explain it to me so I can give it a second go?</string>
    <string name="homework4">"I was kidnapped by terrorists and they only just let me go, so I didn't have time to do it."</string>
    <string name="homework5">"I didn't do it because I didn't want to add to my teacher's heavy workload."</string>
    <string name="homework6">My flash drive exploded.</string>
    <string name="homework7">Had to bail mom out of jail again.</string>
    <string name="homework8">"I didn't do it, because I didn't want the other kids in the class to look bad."</string>
    <string name="lateWork1">My girlfriend is anti daylight savings.</string>
    <string name="lateWork2">I had a severe allergic reaction to 8 A.M.</string>
    <string name="lateWork3">I got caught in a temporary cosmic rift and was stuck in a parallel universe for most of the morning</string>
    <string name="lateWork4">"I forgot we had moved locations and went to our old address. Did you know it's a flower shop now? These are for you."</string>
    <string name="lateWork5">"That's all right, it's not my fault; all I need is some more training."</string>
    <string name="lateWork6">My dog ate my homework.</string>
    <string name="missClass1">Tell your professor you got food poisoning. You puke all over your bathroom for 24 hours and you come in bright-eyed and bushy-tailed the next day, even though you just wrote an Adderall-induced essay in one sitting.</string>
    <string name="missClass2">Tell your teacher that you locked your keys in your car and by the time Triple-A comes to the rescue, class will be over.</string>
    <string name="missClass3">If you tell your teacher you contracted lice over the weekend, they’ll actually be thankful you didn’t come to class. The email is quick and easy: “That’s the last time I’m buying a beanie from a thrift store…”</string>
    <string name="missWork1">"If your boss is a guy, just say you're having "womanly issues" .. no guy has the guts to question it!"</string>
    <string name="missWork10">I have to go to the airport to pick up my minister.</string>
    <string name="missWork11">I have to go to the airport to pick up my minister’s mother.</string>
    <string name="missWork12">I have to take my mother to the doctor.</string>
    <string name="missWork13">I have to take my minister to the doctor.</string>
    <string name="missWork14">I have to take my doctor to my minister.</string>
    <string name="missWork15">I’m having my eyes checked this noon, and they put drops in them so I won’t be able to work afterwards.</string>
    <string name="missWork16">I’m having my ears checked this noon, and they put drops in them so I won’t be able to work afterwards.</string>
    <string name="missWork17">I need to break into my kid’s piggy bank while he’s not home.</string>
    <string name="missWork18">I’ve got an urgent session with my therapist.</string>
    <string name="missWork19">I’ve got a really urgent session with my therapist.</string>
    <string name="missWork2">"You carpool to work, and your carpool group totally forgot you this morning. Now, you'll have to try to hitch a ride with someone else – surely your boss won't encourage hitch hiking!"</string>
    <string name="missWork20">I’ve … I … I’m not … I don’t … I CAN’T COPE WITH THIS!!</string>
    <string name="missWork22">A friend of mine is dying and I have to go to the hospital.</string>
    <string name="missWork3">My dog has a rash all over, and the vet closes early today.</string>
    <string name="missWork4">My cat has a rash all over, and the vet closes early today.</string>
    <string name="missWork5">My kid has a rash all over, and the vet closes early today.</string>
    <string name="missWork6">I’m arranging financing for a house.</string>
    <string name="missWork7">The baby we arranged for nine months ago is arriving, and I think this is the time it’s being delivered.</string>
    <string name="missWork8">I’m being sent to the moon by NASA.</string>
</resources>