<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jacob.excuses.CategoryActivity"
    tools:showIn="@layout/activity_category"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="Categories"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#cacaca"
            android:scrollbarSize="10dp"
            android:scrollbarFadeDuration="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category1"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category1_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category2"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category2_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category3"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category3_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category4"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category4_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category5"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category5_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category6"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category6_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category7"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category7_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category8"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category8_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category9"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category9_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category10"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category10_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category11"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category11_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category12"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category12_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category13"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category13_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category14"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category14_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category15"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category15_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category16"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category16_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category17"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category17_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category18"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category18_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category19"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category19_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category20"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category20_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category21"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category21_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category22"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category22_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category23"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category23_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category24"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category24_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category25"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category25_id"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/category26"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category26_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/category27"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="#767575"
                        android:layout_margin="5dp"
                        android:id="@+id/category27_id"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonName7"
            android:id="@+id/return_button"
            />

    </LinearLayout>

</LinearLayout>
