<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jacob.excuses.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="#cacaca"
            android:fadeScrollbars="false"
            android:scrollbarSize="10dp">

            <TextView
                android:layout_width="300sp"
                android:layout_height="180sp"
                android:id="@+id/answer"
                android:textSize="20sp"
                android:text=""
                android:layout_gravity="center"
                android:gravity="center"/>

        </ScrollView>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/searchString"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="#1111"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonName"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:id="@+id/button_id"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:text="@string/buttonName5"
                android:layout_marginRight="20dp"
                android:id="@+id/button2_id"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:text="@string/buttonName6"
                android:id="@+id/button3_id"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonName7"
            android:id="@+id/button4_id"/>

    </LinearLayout>

</LinearLayout>
